--- a/app/views/contact_mailer/contact_email.text.erb
+++ b/app/views/contact_mailer/contact_email.text.erb
@@ -1,7 +1,7 @@
 Message reçu depuis le portfolio :
 
 Nom : <%= @name %>
-Email : <%= params[:email] %>
+Email : <%= @sender_email %>
 
 Message :
 <%= @message %>
