--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,11 @@
   <head>
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta property="og:title" content="Sylvain Cavalier - Développeur Web">
+    <meta property="og:description" content="Portfolio de Sylvain Cavalier, développeur Ruby on Rails et Vue.js.">
+    <meta property="og:image" content="https://asset.cloudinary.com/dhemegutt/3d95ccd83f30cb120b70e949151b7f28">
+    <meta property="og:url" content="https://www.sylvaincavalier.com">
+    <meta name="twitter:card" content="summary_large_image">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
